tests/lean/unsolved_proof_qed.lean.expected.out
unsolved_proof_qed.lean:2:18: error: don't know how to synthesize placeholder
a b c : ℕ,
H₁ : a = b,
H₂ : b = c
⊢ b = c
unsolved_proof_qed.lean:2:0: error:invalid 'exact' tactic, term still contains metavariables after elaboration
  eq.trans H₁ ?M_1
proof state:
a b c : ℕ,
H₁ : a = b,
H₂ : b = c
⊢ a = c
unsolved_proof_qed.lean:2:0: error: don't know how to synthesize placeholder
a b c : ℕ,
H₁ : a = b,
H₂ : b = c
⊢ a = c
unsolved_proof_qed.lean:2:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
unsolved_proof_qed.lean:5:33: error: don't know how to synthesize placeholder
a b c : ℕ,
H₁ : a = b,
H₂ : b = c
⊢ c = b
unsolved_proof_qed.lean:5:18: error:invalid 'exact' tactic, term still contains metavariables after elaboration
  eq.trans ?M_1 (eq.symm H₁)
proof state:
a b c : ℕ,
H₁ : a = b,
H₂ : b = c
⊢ c = a
unsolved_proof_qed.lean:5:18: error: don't know how to synthesize placeholder
a b c : ℕ,
H₁ : a = b,
H₂ : b = c
⊢ c = a
unsolved_proof_qed.lean:5:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  λ (a b c : ℕ) (H₁ : …) (H₂ : …),
    … ?M_1
